--- a/ERD/DatabaseERD/appsettings.json
+++ b/ERD/DatabaseERD/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaulfConnection": "Server=DESKTOP-E4FR415;Database=StoredProcTARge23 ; Trusted_connection=True;MultipleActiveResultSets=True ; TrustServerCertificate=True"
+    "DefaulfConnection": "Server=DESKTOP-E4FR415;Database=TARge23ERD ; Trusted_connection=True;MultipleActiveResultSets=True ; TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
